fix copy, spacing, generate new pdf

--- a/assets/css/_main.sass
+++ b/assets/css/_main.sass
@@ -13,9 +13,11 @@ body
   width: 8.5in
   height: 11in
   margin: 0 auto
+  font-size: 12px
+  background-color: $lightgrey
 
 header
-  height: 3in
+  height: 2in
   width: 100%
   background-color: $teal
   color: $darkgrey
@@ -45,7 +47,7 @@ header p
   font-family: 'Assistant', sans-serif
 
 .intro
-  padding: 48px 18px
+  padding: 24px 18px
   line-height: 1.2
 
 .header-info
